2021-06-10 Shahzad Muzaffar  <@smuzaffar>
	V06-02-11 Do not persist SCRAM_NOEDM_CHECKS
2021-06-08 Shahzad Muzaffar  <@smuzaffar>
	V06-02-10 Do not run too many python threads for processing DXR files.
2021-06-04 Shahzad Muzaffar  <@smuzaffar>
	V06-02-09: Typo, fixed TSAN EDM_TOOLS_PREFIX issue
2021-06-03 Shahzad Muzaffar  <@smuzaffar>
	V06-02-07: More fixes for clang-tidy Notes Diagnostics
	V06-02-08: Added use-ibeos run which should be used with runtests
	so DAS queries and root files are picked up from IBEOS area.
2021-06-02 Shahzad Muzaffar  <@smuzaffar>
	V06-02-06: Fix code-checks rules
	- Process all headers files for code-checks-all
	- Fix clang-tidy apply script to make use of Notes Diagnostics
2021-05-31 Shahzad Muzaffar  <@smuzaffar>
	V06-02-05: Fix issue with newly added package compilation
2021-05-05 Shahzad Muzaffar  <@smuzaffar>
	V06-02-04 Fix biglib enable/disable rule. SCRAMV3 does not recognize
	'#' as valid comment tag.
2021-05-03 Shahzad Muzaffar  <@smuzaffar>
	V06-02-03 Fix for recursive scram build for link externals
2021-05-01 Shahzad Muzaffar  <@smuzaffar>
	V06-02-01 Fix EDM_TOOL_PREFIX issue for SCRAM V3
	V06-02-02 Fix lcgdict rules for CXXMODULE IBs
2021-04-07 Shahzad Muzaffar  <@smuzaffar>
	V06-02-00 Disable rootdict rule for LinkDef.h files. One should use
	classes.h and classes_def.xml files for declaring dictionaries
2021-04-07 Shahzad Muzaffar  <@smuzaffar>
	V06-01-25 Added more targets matching set SCRAM_TARGET via Self.xml
2021-04-05 Shahzad Muzaffar  <@smuzaffar>
	V06-01-24 Fix for externals symlinks for multiple targets
2021-04-01 Shahzad Muzaffar  <@smuzaffar>
	V06-01-22 Create edmplug cache file for extra taregts
	V06-01-23 Always use default target during build phase
2021-03-23 Shahzad Muzaffar  <@smuzaffar>
	V06-01-20 Use TARGETS keyword instead of VECTOR(IZE) for micro-
	instructions set builds
	V06-01-21 Added supported list of targets
2021-03-11 Shahzad Muzaffar  <@smuzaffar>