@@ -1,3 +1,5 @@
+2021-06-11 Shahzad Muzaffar  <@smuzaffar>
+	V06-02-12 Use python3 for scripts
 2021-06-10 Shahzad Muzaffar  <@smuzaffar>
 	V06-02-11 Do not persist SCRAM_NOEDM_CHECKS
 2021-06-08 Shahzad Muzaffar  <@smuzaffar>
